[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tileset_void.png" type="Texture" id=2]
[ext_resource path="res://scenes/hud/Scores.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/menu/GameOver.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -362, -240, 5542, -232, 5558, 3240, -338, 3216 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -362, -240, 5542, -232, 5558, 3240, -338, 3216 ) ]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -405.0
margin_top = -293.0
margin_right = 5614.0
margin_bottom = 3308.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 2560, 1440 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 1.25, 1.25 )
limit_left = 0
limit_top = 0
limit_right = 5120
limit_bottom = 2880
smoothing_speed = 15.0
editor_draw_limits = true

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Scores" parent="." instance=ExtResource( 3 )]
follow_viewport_enable = false

[node name="GameOver" parent="Scores" instance=ExtResource( 5 )]
margin_left = 2424.0
margin_top = 1322.0
margin_right = 2936.0
margin_bottom = 1834.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="player_killed" from="Player" to="." method="_on_Player_player_killed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
